【init】代码合并